--- a/Experiment Data Viewer.ipynb
+++ b/Experiment Data Viewer.ipynb
@@ -32,8 +32,9 @@
         "from scipy.interpolate import griddata\n",
         "import ipywidgets as widgets\n",
         "from IPython.display import display\n",
-        "# load experimental data stored in this github\n",
-        "!wget https://raw.githubusercontent.com/adrozman/ULI-noise-viz/main/ULI_selected_data.npz"
+        "# load experimental data stored in this github repo\n",
+        "!wget https://raw.githubusercontent.com/adrozman/ULI-noise-viz/main/ULI_selected_data.npz\n",
+        "# if \"ULI_selected_data.npz\" is downloaded locally, you can remove the wget above"
       ]
     },
     {
@@ -224,17 +225,12 @@
         "    levels = np.linspace(spl_limits[0], spl_limits[1], 75)\n",
         "    SPL = noise[(u,yaw)]['maps']['BPF'][rpm_ix] if target_fq==\"BPF\" else noise[(u,yaw)]['maps']['BROADBAND'][rpm_ix]\n",
         "    Z = griddata((xyz[:, 0], xyz[:, 1]), SPL, (X, Y), method='linear')\n",
-        "\n",
-        "    # fig2, ax2 = plt.subplots(layout='constrained', figsize=(4, 3))\n",
         "    CS = ax2.contourf(X, Y, Z, levels, extend='both', cmap=\"jet\")\n",
-        "    # title = fr\"1st BPF Directivity: {rpm} RPM, {u} m/s, {yaw}$\\degree$ yaw\"\n",
         "\n",
-        "    # Call the helper function\n",
         "    title = f\"BPF ({rpm} Hz) Directivity\" if target_fq==\"BPF\" else r\"Broadband (integrated 500 $\\rightarrow$ 2000 Hz) Directivity\"\n",
-        "\n",
+        "    ax2.set_title(title, fontsize=15)\n",
         "    ax2.set_xlabel('X (m)', fontsize=16)\n",
         "    ax2.set_ylabel('Y (m)', fontsize=16, labelpad=-6)\n",
-        "    ax2.set_title(title, fontsize=15)\n",
         "    ax2.tick_params(axis='both', labelsize=10)\n",
         "    ax2.axis('equal')\n",
         "    ax2.tick_params(axis='both', which='both', direction='inout', pad=7)\n",
@@ -277,7 +273,7 @@
         "        target_mic=mic_widget.value,\n",
         "        spl_limits=spl_range_slider.value\n",
         "    )\n",
-        "# remaining widgets update plot function when changed, nothing else\n",
+        "# remaining widgets update plot function when changed, nothing else fancy\n",
         "rpm_widget.observe(update_plot, names='value')\n",
         "fq_widget.observe(update_plot, names='value')\n",
         "mic_widget.observe(update_plot, names='value')\n",
