Fixed equal range slider value conflict and initialization values

--- a/Experiment Data Viewer.ipynb
+++ b/Experiment Data Viewer.ipynb
@@ -34,7 +34,7 @@
         "from IPython.display import display\n",
         "# load experimental data stored in this github repo\n",
         "!wget https://raw.githubusercontent.com/adrozman/ULI-noise-viz/main/ULI_selected_data.npz\n",
-        "# if \"ULI_selected_data.npz\" is downloaded locally, you can remove the wget above"
+        "#if \"ULI_selected_data.npz\" is downloaded locally, you can remove the wget command above"
       ]
     },
     {
@@ -72,10 +72,9 @@
         "#@title Widget creation and logic\n",
         "# [U,yaw] option pairs\n",
         "all_conditions = list(noise.keys())\n",
-        "u_options = sorted(list(set([k[0] for k in all_conditions])))\n",
-        "yaw_options = sorted(list(set([k[1] for k in all_conditions])))\n",
-        "u_widget = widgets.Dropdown(options=u_options,description='U (m/s):',value=10)\n",
-        "yaw_widget = widgets.Dropdown(options=yaw_options,description='Yaw (deg):',value=80)\n",
+        "\n",
+        "u_widget = widgets.Dropdown(options=[10,20],description='U (m/s):',value=10)\n",
+        "yaw_widget = widgets.Dropdown(options=[0,70,80,90],description='Yaw (deg):',value=0)\n",
         "\n",
         "# RPM widget options initialized to 10 m/s, 0 yaw, and set to 3000 RPM\n",
         "rpm_widget = widgets.Dropdown(options=noise[(10,0)]['rpms'],description='RPM:',value=3000)\n",
@@ -85,7 +84,7 @@
         "# but returning an int from (0,7)\n",
         "mic_options_list = [(f\"[{coords[0]:.2f}, {coords[1]:.2f}]\", i)\n",
         "    for i, coords in zip(range(7), spectra_mic_locs[0, :7, :2])]\n",
-        "mic_widget = widgets.Dropdown(options=mic_options_list,description='Target Mic:')\n",
+        "mic_widget = widgets.Dropdown(options=mic_options_list,description='Target Mic:',value=3)\n",
         "\n",
         "spl_range_slider = widgets.FloatRangeSlider(value=[20, 80],min=0,max=120,step=5,\n",
         "    description='SPL range',continuous_update=True,readout_format='.0f'\n",
@@ -227,7 +226,7 @@
         "    Z = griddata((xyz[:, 0], xyz[:, 1]), SPL, (X, Y), method='linear')\n",
         "    CS = ax2.contourf(X, Y, Z, levels, extend='both', cmap=\"jet\")\n",
         "\n",
-        "    title = f\"BPF ({rpm} Hz) Directivity\" if target_fq==\"BPF\" else r\"Broadband (integrated 500 $\\rightarrow$ 2000 Hz) Directivity\"\n",
+        "    title = f\"BPF Directivity ({BPF:.1f} Hz)\" if target_fq==\"BPF\" else r\"Broadband Directivity (integrated 500$\\rightarrow$2000 Hz)\"\n",
         "    ax2.set_title(title, fontsize=15)\n",
         "    ax2.set_xlabel('X (m)', fontsize=16)\n",
         "    ax2.set_ylabel('Y (m)', fontsize=16, labelpad=-6)\n",
@@ -265,13 +264,25 @@
         "        plt.close(fig)\n",
         "\n",
         "def update_plot(change):\n",
+        "\n",
+        "    low, high = spl_range_slider.value\n",
+        "\n",
+        "    if low == high:\n",
+        "        print(\"OOPS!!\")\n",
+        "        step = spl_range_slider.step # Get the step (5.0)\n",
+        "\n",
+        "        if high + step <= spl_range_slider.max:\n",
+        "            high = high + step\n",
+        "        else:\n",
+        "              # If at max, nudge the 'low' value down\n",
+        "              low = low - step\n",
         "    plot_figs(\n",
         "        u=u_widget.value,\n",
         "        yaw=yaw_widget.value,\n",
         "        rpm=rpm_widget.value,\n",
         "        target_fq=fq_widget.value,\n",
         "        target_mic=mic_widget.value,\n",
-        "        spl_limits=spl_range_slider.value\n",
+        "        spl_limits=(low,high)\n",
         "    )\n",
         "# remaining widgets update plot function when changed, nothing else fancy\n",
         "rpm_widget.observe(update_plot, names='value')\n",
