--- a/Experiment Data Viewer.ipynb
+++ b/Experiment Data Viewer.ipynb
@@ -79,6 +79,7 @@
         "# RPM widget options initialized to 10 m/s, 0 yaw, and set to 3000 RPM\n",
         "rpm_widget = widgets.Dropdown(options=noise[(10,0)]['rpms'],description='RPM:',value=3000)\n",
         "fq_widget = widgets.Dropdown(options=[\"BPF\", \"BROADBAND\"],description='Contour Map Value:')\n",
+        "fq_widget.style.description_width = '120px'\n",
         "\n",
         "# create value, pair tuples displaying the coordinates on the drop-down widget\n",
         "# but returning an int from (0,7)\n",
